Update generated slides

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ await pinger.Tell(new Ping());
 <li>OnActivate =&gt; loads state</li>
 <li>OnReceive  =&gt; Handle</li>
 <li>Reminders  =&gt; Persistent scheduling</li>
-<li>Timers     =&gt; Non-persisten scheduling</li>
+<li>Timers     =&gt; Non-persistent scheduling</li>
 <li>Streams    =&gt; Pub/Sub</li>
 <li>Reentrancy =&gt; Concurrent execution (Queries!)</li>
 <li>Workers    =&gt; Stateless parallelism</li>
@@ -337,7 +337,7 @@ await pinger.Tell(new Ping());
 <section >
 <h1>Marketing</h1>
 <ul>
-<li>Halo with 14 ml users</li>
+<li>beta tested by Halo team</li>
 <li>EA implemented Orbit in JVM</li>
 <li>95% CPU utilisation</li>
 </ul>
