Update generated slides

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <h2>Orleankka + F#</h2>
 <br />
 <br />
-<h3>Statefull distributed architecture via MSFT Orleans</h3>
+<h3>Stateful distributed architecture via MSFT Orleans</h3>
 <p><br />
 <br />
 Alexander Prooks - <a href="http://www.twitter.com/aprooks">@aprooks</a></p>
@@ -107,7 +107,7 @@ External scheduling:
 <li>Function or object</li>
 <li>Isolated state</li>
 <li>Syncronous execution</li>
-<li>Messages (requests) are queued</li>
+<li>Messages (requests) are queued in-memory</li>
 </ul>
 </section>
 <section >
